{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 169,
  "lineage": "e0eb8000-c0cd-fa94-014b-95546413080b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:260601702770:route-table/rtb-060a5ec344c98963e",
            "default_route_table_id": "rtb-060a5ec344c98963e",
            "id": "rtb-060a5ec344c98963e",
            "owner_id": "260601702770",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e29846998bb97db7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "elastic"
            },
            "tags_all": {
              "Name": "default route table",
              "env": "elastic"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a459d01b2f9ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:260601702770:instance/i-01ace9ca6e539bf73",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ace9ca6e539bf73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ff781f6f1b04e15",
            "private_dns": "ip-10-11-0-98.us-west-2.compute.internal",
            "private_ip": "10.11.0.98",
            "public_ip": "52.41.97.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0791c518f49f054d3",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022b4a6272bf70c3",
            "tags": {
              "Name": "VM1"
            },
            "tags_all": {
              "Name": "VM1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088f3ddb6c42ec520"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:260601702770:instance/i-00f765e908d265586",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f765e908d265586",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ede740d9c54484fd",
            "private_dns": "ip-10-11-0-233.us-west-2.compute.internal",
            "private_ip": "10.11.0.233",
            "public_ip": "34.222.84.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0873f0c46ded1717f",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022b4a6272bf70c3",
            "tags": {
              "Name": "VM2"
            },
            "tags_all": {
              "Name": "VM2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088f3ddb6c42ec520"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:260601702770:instance/i-0e0190118205fcdd7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0190118205fcdd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0431effa3836715e5",
            "private_dns": "ip-10-11-0-96.us-west-2.compute.internal",
            "private_ip": "10.11.0.96",
            "public_ip": "54.186.14.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c012c115b31c7f19",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022b4a6272bf70c3",
            "tags": {
              "Name": "VM3"
            },
            "tags_all": {
              "Name": "VM3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088f3ddb6c42ec520"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM4",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:260601702770:instance/i-07cf47da074e8a2bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cf47da074e8a2bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09679e0e12a45a4fa",
            "private_dns": "ip-10-11-0-15.us-west-2.compute.internal",
            "private_ip": "10.11.0.15",
            "public_ip": "18.237.42.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026092f5d8833a794",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022b4a6272bf70c3",
            "tags": {
              "Name": "VM4"
            },
            "tags_all": {
              "Name": "VM4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088f3ddb6c42ec520"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "VM5",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:260601702770:instance/i-06fe2f9e0ae958393",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fe2f9e0ae958393",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07018256364fb7f5d",
            "private_dns": "ip-10-11-0-86.us-west-2.compute.internal",
            "private_ip": "10.11.0.86",
            "public_ip": "18.237.227.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa1cd3d163002d6d",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022b4a6272bf70c3",
            "tags": {
              "Name": "VM5"
            },
            "tags_all": {
              "Name": "VM5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088f3ddb6c42ec520"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgroup",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:260601702770:internet-gateway/igw-0e29846998bb97db7",
            "id": "igw-0e29846998bb97db7",
            "owner_id": "260601702770",
            "tags": {
              "Env": "elastic",
              "Name": "elastic_gw"
            },
            "tags_all": {
              "Env": "elastic",
              "Name": "elastic_gw"
            },
            "vpc_id": "vpc-041a459d01b2f9ab2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:260601702770:security-group/sg-088f3ddb6c42ec520",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088f3ddb6c42ec520",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "terraform-20220424144640202000000001",
            "name_prefix": "terraform-",
            "owner_id": "260601702770",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041a459d01b2f9ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:260601702770:subnet/subnet-0022b4a6272bf70c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0022b4a6272bf70c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260601702770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "elastic",
              "Name": "elastic_subnet"
            },
            "tags_all": {
              "Env": "elastic",
              "Name": "elastic_subnet"
            },
            "vpc_id": "vpc-041a459d01b2f9ab2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:260601702770:vpc/vpc-041a459d01b2f9ab2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-08d4599b4b860e83e",
            "default_route_table_id": "rtb-060a5ec344c98963e",
            "default_security_group_id": "sg-0601677aa3f752e71",
            "dhcp_options_id": "dopt-0abb8199313ffc013",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-041a459d01b2f9ab2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060a5ec344c98963e",
            "owner_id": "260601702770",
            "tags": {
              "Env": "elastic",
              "Name": "elastic_vpc"
            },
            "tags_all": {
              "Env": "elastic",
              "Name": "elastic_vpc"
            }
          }
        }
      ]
    }
  ]
}